--- a/ui/device_manager.ui
+++ b/ui/device_manager.ui
@@ -68,7 +68,7 @@
       </font>
      </property>
      <property name="text">
-      <string>As of v0.5 this Device Manager window is only viewable at program startup.</string>
+      <string>This Device Manager window is only viewable at program startup.</string>
      </property>
      <property name="wordWrap">
       <bool>true</bool>
@@ -364,6 +364,13 @@
       <number>5</number>
      </property>
      <item>
+      <widget class="QLabel" name="current_loading_status">
+       <property name="text">
+        <string>                    </string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer_3">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -377,19 +384,6 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="acc_button">
-       <property name="font">
-        <font>
-         <family>Segoe UI Semibold</family>
-         <pointsize>12</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Accept</string>
-       </property>
-      </widget>
-     </item>
-     <item>
       <widget class="QCheckBox" name="dum_checkbox">
        <property name="font">
         <font>
@@ -399,6 +393,19 @@
        </property>
        <property name="text">
         <string>Dummy Mode</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="acc_button">
+       <property name="font">
+        <font>
+         <family>Segoe UI Semibold</family>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Accept</string>
        </property>
       </widget>
      </item>
