Updated version number, fixed issue where canceling import/export would crash the program, positions are now polled for all connected axes, increased position polling rates, now disables buttons during moves, move status is controlled by the position poller. Unsure if the 'still moving' bug is fixed or not, will require verification.

--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -131,7 +131,7 @@
                 </property>
                 <layout class="QVBoxLayout" name="verticalLayout_5" stretch="0,1">
                  <item>
-                  <layout class="QHBoxLayout" name="horizontalLayout_22">
+                  <layout class="QHBoxLayout" name="horizontalLayout_22" stretch="0,0,0,0,0">
                    <property name="leftMargin">
                     <number>0</number>
                    </property>
@@ -161,6 +161,39 @@
                    </item>
                    <item>
                     <spacer name="horizontalSpacer_13">
+                     <property name="orientation">
+                      <enum>Qt::Horizontal</enum>
+                     </property>
+                     <property name="sizeHint" stdset="0">
+                      <size>
+                       <width>40</width>
+                       <height>20</height>
+                      </size>
+                     </property>
+                    </spacer>
+                   </item>
+                   <item>
+                    <widget class="QPushButton" name="master_stop_button">
+                     <property name="minimumSize">
+                      <size>
+                       <width>0</width>
+                       <height>0</height>
+                      </size>
+                     </property>
+                     <property name="font">
+                      <font>
+                       <family>Segoe UI Semibold</family>
+                       <pointsize>12</pointsize>
+                       <italic>true</italic>
+                      </font>
+                     </property>
+                     <property name="text">
+                      <string>All Stop</string>
+                     </property>
+                    </widget>
+                   </item>
+                   <item>
+                    <spacer name="horizontalSpacer_22">
                      <property name="orientation">
                       <enum>Qt::Horizontal</enum>
                      </property>
@@ -222,8 +255,8 @@
                      <rect>
                       <x>0</x>
                       <y>0</y>
-                      <width>620</width>
-                      <height>1401</height>
+                      <width>630</width>
+                      <height>1194</height>
                      </rect>
                     </property>
                     <layout class="QVBoxLayout" name="verticalLayout_14">
@@ -1072,7 +1105,7 @@
                                <rect>
                                 <x>0</x>
                                 <y>0</y>
-                                <width>565</width>
+                                <width>587</width>
                                 <height>148</height>
                                </rect>
                               </property>
@@ -2911,7 +2944,7 @@
      <x>0</x>
      <y>0</y>
      <width>1400</width>
-     <height>21</height>
+     <height>18</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
