--- a/ui/device_manager.ui
+++ b/ui/device_manager.ui
@@ -42,7 +42,7 @@
      </property>
      <property name="font">
       <font>
-       <family>Segoe UI</family>
+       <family>Bahnschrift</family>
        <pointsize>12</pointsize>
        <weight>50</weight>
        <bold>false</bold>
@@ -60,7 +60,7 @@
     <widget class="QLabel" name="label_2">
      <property name="font">
       <font>
-       <family>Segoe UI</family>
+       <family>Bahnschrift</family>
        <pointsize>12</pointsize>
        <weight>50</weight>
        <italic>true</italic>
@@ -79,7 +79,7 @@
     <widget class="QGroupBox" name="groupBox_3">
      <property name="font">
       <font>
-       <family>Segoe UI Semibold</family>
+       <family>Bahnschrift SemiBold</family>
        <pointsize>12</pointsize>
        <weight>50</weight>
        <bold>false</bold>
@@ -102,8 +102,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>758</width>
-           <height>170</height>
+           <width>750</width>
+           <height>161</height>
           </rect>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -128,6 +128,11 @@
                 <width>44</width>
                 <height>27</height>
                </size>
+              </property>
+              <property name="font">
+               <font>
+                <family>Bahnschrift</family>
+               </font>
               </property>
               <property name="minimum">
                <number>1</number>
@@ -181,10 +186,22 @@
                <number>5</number>
               </property>
               <item>
-               <widget class="QComboBox" name="samp_combo"/>
+               <widget class="QComboBox" name="samp_combo">
+                <property name="font">
+                 <font>
+                  <family>Bahnschrift</family>
+                 </font>
+                </property>
+               </widget>
               </item>
               <item>
-               <widget class="QComboBox" name="samp_model_combo"/>
+               <widget class="QComboBox" name="samp_model_combo">
+                <property name="font">
+                 <font>
+                  <family>Bahnschrift</family>
+                 </font>
+                </property>
+               </widget>
               </item>
              </layout>
             </item>
@@ -214,7 +231,7 @@
     <widget class="QGroupBox" name="groupBox_4">
      <property name="font">
       <font>
-       <family>Segoe UI Semibold</family>
+       <family>Bahnschrift SemiBold</family>
        <pointsize>12</pointsize>
       </font>
      </property>
@@ -238,8 +255,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>758</width>
-           <height>169</height>
+           <width>750</width>
+           <height>162</height>
           </rect>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -264,6 +281,11 @@
                 <width>44</width>
                 <height>27</height>
                </size>
+              </property>
+              <property name="font">
+               <font>
+                <family>Bahnschrift</family>
+               </font>
               </property>
               <property name="minimum">
                <number>1</number>
@@ -320,10 +342,22 @@
                <number>5</number>
               </property>
               <item>
-               <widget class="QComboBox" name="mtn_combo"/>
+               <widget class="QComboBox" name="mtn_combo">
+                <property name="font">
+                 <font>
+                  <family>Bahnschrift</family>
+                 </font>
+                </property>
+               </widget>
               </item>
               <item>
-               <widget class="QComboBox" name="mtn_model_combo"/>
+               <widget class="QComboBox" name="mtn_model_combo">
+                <property name="font">
+                 <font>
+                  <family>Bahnschrift</family>
+                 </font>
+                </property>
+               </widget>
               </item>
              </layout>
             </item>
@@ -387,7 +421,7 @@
       <widget class="QCheckBox" name="dum_checkbox">
        <property name="font">
         <font>
-         <family>Segoe UI Semibold</family>
+         <family>Bahnschrift</family>
          <pointsize>12</pointsize>
         </font>
        </property>
@@ -400,8 +434,10 @@
       <widget class="QPushButton" name="acc_button">
        <property name="font">
         <font>
-         <family>Segoe UI Semibold</family>
+         <family>Bahnschrift SemiBold</family>
          <pointsize>12</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
         </font>
        </property>
        <property name="text">
@@ -413,7 +449,7 @@
       <widget class="QPushButton" name="cancel_button">
        <property name="font">
         <font>
-         <family>Segoe UI Semibold</family>
+         <family>Bahnschrift</family>
          <pointsize>12</pointsize>
         </font>
        </property>
