--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -229,7 +229,7 @@
                     <property name="geometry">
                      <rect>
                       <x>0</x>
-                      <y>-976</y>
+                      <y>0</y>
                       <width>620</width>
                       <height>1479</height>
                      </rect>
@@ -2853,6 +2853,23 @@
                     </widget>
                    </item>
                   </layout>
+                 </item>
+                 <item>
+                  <widget class="QTabWidget" name="table_tabs">
+                   <property name="currentIndex">
+                    <number>1</number>
+                   </property>
+                   <widget class="QWidget" name="tab">
+                    <attribute name="title">
+                     <string>Detector 1</string>
+                    </attribute>
+                   </widget>
+                   <widget class="QWidget" name="tab_2">
+                    <attribute name="title">
+                     <string>Page</string>
+                    </attribute>
+                   </widget>
+                  </widget>
                  </item>
                  <item>
                   <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0">
